Fix display error message

--- a/src/app/components/admin/auth/forget-password/forget-password.component.html
+++ b/src/app/components/admin/auth/forget-password/forget-password.component.html
@@ -6,8 +6,8 @@
           <mat-label>Correo</mat-label>
           <input type="text" matInput formControlName="EmailFormControl" required>
           <mat-error *ngIf="ForgetPasswordForm.controls['EmailFormControl']">
-            Por favor el correo con un formato correcto
-        </mat-error>
+            Por favor digite el correo con un formato correcto
+          </mat-error>
         </mat-form-field>
       </div>
       <button id="sumbit-button" type="submit" class="" mat-raised-button color="primary">Enviar Correo</button>
