--- a/src/app/components/judges/dashboard/settings/forget-password/forget-password.component.html
+++ b/src/app/components/judges/dashboard/settings/forget-password/forget-password.component.html
@@ -9,7 +9,7 @@
             <mat-form-field class="full-width" appearance="outline">
                 <input type="text" matInput formControlName="EmailFormControl">
                 <mat-error *ngIf="ForgetPasswordForm.controls['EmailFormControl']">
-                    Por favor el correo con un formato correcto
+                    Por favor digite el correo con un formato correcto
                 </mat-error>
             </mat-form-field>
         <button id="sumbit-button" class="" type="submit" mat-raised-button color="primary">Enviar Correo</button>
