--- a/src/app/components/judges/dashboard/projects-list/projects-list.component.html
+++ b/src/app/components/judges/dashboard/projects-list/projects-list.component.html
@@ -25,13 +25,13 @@
 
             <!--Button-->
             <ng-container matColumnDef="id">
-            <th mat-header-cell *matHeaderCellDef>Calificar</th>
+            <th mat-header-cell *matHeaderCellDef>Calificar proyecto</th>
                 <td mat-cell *matCellDef="let element">
                     <mat-icon [routerLink]="['/judges/project-details/', element.id]" class="btn_calificar">border_color</mat-icon>
                 </td>
             </ng-container>
                <ng-container matColumnDef="actions">
-            <th mat-header-cell *matHeaderCellDef>Calificaciones</th>
+            <th mat-header-cell *matHeaderCellDef>Otras calificaciones</th>
                 <td mat-cell *matCellDef="let element">
                     <mat-icon (click)="otherQualifications(element.id)" class="btn_calificaciones">domain_verification</mat-icon>
                 </td>
