Redirect to projects

--- a/src/app/components/students/dashboard/current-proyect-proposals/current-proyect-proposals.component.html
+++ b/src/app/components/students/dashboard/current-proyect-proposals/current-proyect-proposals.component.html
@@ -15,7 +15,7 @@
         <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
             <ng-container matColumnDef="name">
                 <th mat-header-cell *matHeaderCellDef> Nombre del proyecto</th>
-                <td mat-cell *matCellDef="let element" [routerLink]="['/student/project', element.id]" routerLinkActive="router-link-active" class="redirect"> {{element.name}} </td>
+                <td mat-cell *matCellDef="let element" [routerLink]="['/student/projects', element.id]" routerLinkActive="router-link-active" class="redirect"> {{element.name}} </td>
             </ng-container>
             <ng-container matColumnDef="description">
                 <th mat-header-cell *matHeaderCellDef> Descripción </th>
@@ -25,4 +25,4 @@
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
         </table>
     </div>
-</div>/
+</div>
