Add login logo image

--- a/src/app/components/admin/auth/auth.component.css
+++ b/src/app/components/admin/auth/auth.component.css
@@ -52,8 +52,10 @@
     background: #FFFFFF;
     width: 50%;
     height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
-
 
 /* underline {
     text-decoration: underline;
