--- a/src/app/components/admin/auth/auth.component.html
+++ b/src/app/components/admin/auth/auth.component.html
@@ -1,6 +1,7 @@
 
 <div class="container-auth container-flex" id="container">
     <div class="image-container">
+        <img class='logo' src="/assets/images/Logo.png">
     </div>
     <div class="form-container">
         <div class="form-header">
