--- a/src/app/components/admin/auth/forget-password/forget-password.component.html
+++ b/src/app/components/admin/auth/forget-password/forget-password.component.html
@@ -9,6 +9,7 @@
             Por favor digite el correo con un formato correcto
           </mat-error>
         </mat-form-field>
+        <a id="forgot-redirect" class="full-width" [routerLink]="['/auth', 'login']">¿Volver al login?</a>
       </div>
       <button id="sumbit-button" type="submit" class="" mat-raised-button color="primary">Enviar Correo</button>
     </form>
