--- a/src/app/components/admin/auth/login/login.component.html
+++ b/src/app/components/admin/auth/login/login.component.html
@@ -32,5 +32,5 @@
       </div>
     </div>
   </form>
-  <button (click)="send(form)" class="" mat-raised-button color="primary">Ingresar</button>
+  <button (click)="send(form)" class="" id="sumbit-button" mat-raised-button color="primary">Ingresar</button>
 </div>
