--- a/src/app/components/admin/auth/forget-password/forget-password.component.css
+++ b/src/app/components/admin/auth/forget-password/forget-password.component.css
@@ -25,17 +25,18 @@ form.login-form {
     font-size: 1.2rem;
     width: 70%;
     height: 1rem;
-    padding-bottom: 15%;
+    padding-bottom: 12%;
 }
 
 #sumbit-button {
-    width: 20%;
+    width: 15%;
     height: 3rem;
     background-color: #354F52;
-    margin: 1rem auto;
+    margin: 2rem auto;
     border-radius: 5px;
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 
 .password {
@@ -49,5 +50,9 @@ form.login-form {
     color: #397EF6;
     text-decoration: none;
     text-align: right;
+}
+
+p{
+    margin-bottom: 3%;
 }
 
