Enable the read, create and update of the events from the calendar.

--- a/src/app/components/administrator/dashboard/create-appointments/create-appointments.component.html
+++ b/src/app/components/administrator/dashboard/create-appointments/create-appointments.component.html
@@ -49,6 +49,13 @@
                 </mat-form-field>
             </div>
 
+            <div class="row">
+                <mat-form-field class="full-width" appearance="legacy">
+                    <mat-label>Detalles/notas del evento</mat-label>
+                    <input class="full-width" matInput formControlName="details">
+                </mat-form-field>
+            </div>
+
             <div class="dates">
                 <mat-slide-toggle style="float: right;" formControlName="allDay">Todo el dia</mat-slide-toggle>
             </div>
