--- a/src/app/components/administrator/dashboard/edit-event/edit-event.component.html
+++ b/src/app/components/administrator/dashboard/edit-event/edit-event.component.html
@@ -1,6 +1,12 @@
-<div class="modal-header">
-    <h2 class="modal-title" style="margin-bottom: 0;">Edit modal</h2>
-    <button type="button" class="btn btn-outline-danger close-btn" (click)="dismiss()">&times;
+<div *ngIf="user_role !== 'Admin'">
+  <div class="modal-header">
+    <h2 class="modal-title" style="margin-bottom: 0">Informacion del evento</h2>
+    <button
+      type="button"
+      class="btn btn-outline-danger close-btn"
+      (click)="dismiss()"
+    >
+      &times;
     </button>
   </div>
   <div class="modal-body container" ngbAutofocus>
@@ -8,15 +14,10 @@
       <div class="row">
         <div class="col-10">
           <mat-form-field class="full-width" appearance="legacy">
-            <mat-label>Title</mat-label>
-            <input class="full-width" matInput [(ngModel)]="appointment.title">
+            <mat-label>Titulo del evento</mat-label>
+            <input class="full-width" matInput [(ngModel)]="event.title" />
           </mat-form-field>
         </div>
-        <!-- <div class="col-2">
-          <div class="color-picker">
-            <input type="color" [(ngModel)]="appointment.color">
-          </div>
-        </div> -->
       </div>
     </mat-card>
   
@@ -24,64 +25,164 @@
       <div class="row justify-content-evenly dates">
         <div class="col-6">
           <mat-form-field class="datetime-picker">
-            <input matInput [matDatepicker]="start"
-              placeholder="Choose the start of the appoitment" [(ngModel)]="appointment.start">
+            <input
+              matInput
+              [matDatepicker]="start"
+              placeholder="Elija el inicio del evento"
+              [(ngModel)]="event.start"
+            />
             <mat-datepicker-toggle matSuffix [for]="$any(start)">
-                <mat-icon matDatepickerToggleIcon>keyboard_arrow_down</mat-icon>
+              <mat-icon matDatepickerToggleIcon>keyboard_arrow_down</mat-icon>
             </mat-datepicker-toggle>
             <mat-date-range-picker #start></mat-date-range-picker>
-            <!-- <ngx-mat-datetime-picker #start [showSpinners]="false">
-              <ng-template>
-                <span>OK</span>
-              </ng-template>
-            </ngx-mat-datetime-picker> -->
           </mat-form-field>
         </div>
         <div class="col-6">
           <mat-form-field class="datetime-picker">
-            <input matInput [disabled]="appointment.allDay" [matDatepicker]="ends"
-              placeholder="Choose the end of the appoitment" [(ngModel)]="appointment.ends">
-            <mat-datepicker-toggle matSuffix [for]="$any(ends)"></mat-datepicker-toggle>
+            <input
+              matInput
+              [disabled]="event.allDay"
+              [matDatepicker]="ends"
+              placeholder="Elija el final del evento"
+              [(ngModel)]="event.ends"
+            />
+            <mat-datepicker-toggle
+              matSuffix
+              [for]="$any(ends)"
+            ></mat-datepicker-toggle>
             <mat-datepicker #ends></mat-datepicker>
-            <!-- <ngx-mat-datetime-picker #ends [showSpinners]="false"> -->
-              <!-- <ng-template>
-                <span>OK</span>
-              </ng-template>
-            </ngx-mat-datetime-picker> -->
           </mat-form-field>
         </div>
       </div>
       <div class="dates">
-        <mat-slide-toggle [(ngModel)]="appointment.allDay" style="float: right;">All day</mat-slide-toggle>
+        <mat-slide-toggle [(ngModel)]="event.allDay" style="float: right"
+          >Todo el dia</mat-slide-toggle
+        >
       </div>
     </mat-card>
   
     <mat-expansion-panel class="full-width">
       <mat-expansion-panel-header>
-        <mat-panel-title>
-          Add details
-        </mat-panel-title>
+        <mat-panel-title> Agregar detalles </mat-panel-title>
       </mat-expansion-panel-header>
-      <mat-panel-description>
-  
-      </mat-panel-description>
+      <mat-panel-description> </mat-panel-description>
       <div>
         <mat-form-field appearance="legacy" class="full-width">
-          <mat-label>Notes</mat-label>
-          <input matInput [(ngModel)]="appointment.notes">
+          <mat-label>Detalles</mat-label>
+          <input matInput [(ngModel)]="event.details" />
         </mat-form-field>
       </div>
   
       <div>
         <mat-form-field appearance="legacy" class="full-width">
-          <mat-label>Location</mat-label>
-          <input matInput [(ngModel)]="appointment.location">
+          <mat-label>Lugar</mat-label>
+          <input matInput [(ngModel)]="event.location" />
         </mat-form-field>
       </div>
     </mat-expansion-panel>
   
     <div class="modal-footer">
-      <button mat-raised-button type="button" class="btn btn-danger" (click)="decline()">Cancel</button>
-      <button mat-raised-button type="button" class="btn btn-primary" (click)="accept()">Save</button>
+      <button
+        mat-raised-button
+        type="button"
+        class="btn btn-danger"
+        (click)="decline()"
+      >
+        Cerrar
+      </button>
+      <button
+        mat-raised-button
+        type="button"
+        class="btn btn-primary"
+        (click)="accept()"
+      >
+        Guardar cambios
+      </button>
     </div>
   </div>
+</div>
+
+<div *ngIf="user_role === 'Admin'">
+  <div class="modal-header">
+    <h2 class="modal-title" style="margin-bottom: 0">Informacion del evento</h2>
+    <button
+      type="button"
+      class="btn btn-outline-danger close-btn"
+      (click)="dismiss()"
+    >
+      &times;
+    </button>
+  </div>
+  <div class="modal-body container" ngbAutofocus>
+    <mat-card>
+      <div class="row">
+        <h2>{{ event.title }}</h2>
+      </div>
+    </mat-card>
+  
+    <mat-card>
+      <div class="row justify-content-evenly dates">
+        <div class="col-6">
+          <mat-form-field class="datetime-picker">
+            <input
+              matInput
+              [matDatepicker]="start"
+              [disabled]="true"
+              placeholder="Inicio del evento"
+              [(ngModel)]="event.start"
+            />
+            <mat-date-range-picker #start></mat-date-range-picker>
+          </mat-form-field>
+        </div>
+        <div class="col-6">
+          <mat-form-field class="datetime-picker">
+            <input
+              matInput
+              [disabled]="event.allDay"
+              [matDatepicker]="ends"
+              placeholder="Final del evento"
+              [(ngModel)]="event.ends"
+              [disabled]="true"
+            />
+            <mat-datepicker-toggle
+              matSuffix
+              [for]="$any(ends)"
+            ></mat-datepicker-toggle>
+            <mat-datepicker #ends></mat-datepicker>
+          </mat-form-field>
+        </div>
+      </div>
+      <div class="dates">
+        <mat-slide-toggle [(ngModel)]="event.allDay" [disabled]="true" style="float: right">Todo el dia</mat-slide-toggle>
+      </div>
+    </mat-card>
+  
+    <mat-expansion-panel class="full-width">
+      <mat-expansion-panel-header>
+        <mat-panel-title> Ver detalles del evento </mat-panel-title>
+      </mat-expansion-panel-header>
+      <mat-panel-description> </mat-panel-description>
+      <div>
+        <h5 class="mb-1">Detalles: </h5>
+        <h3>{{ event.details }}</h3>
+      </div>
+
+      <mat-divider class="mt-3 mb-3"></mat-divider>
+  
+      <div>
+        <h5 class="mb-1">Lugar del evento: </h5>
+        <h3>{{ event.details }}</h3>
+      </div>
+    </mat-expansion-panel>
+  
+    <div class="modal-footer">
+      <button
+        mat-raised-button
+        type="button"
+        class="btn btn-danger"
+        (click)="decline()">
+        Cerrar
+      </button>
+    </div>
+  </div>
+</div>
