--- a/src/app/components/administrator/dashboard/fair-calendar/fair-calendar.component.html
+++ b/src/app/components/administrator/dashboard/fair-calendar/fair-calendar.component.html
@@ -10,7 +10,7 @@
         </div>
     </div>
     <div class="calendar-content" [ngSwitch]="view">
-        <mwl-calendar-month-view [viewDate]="viewDate" [events]="list_events" [refresh]="refresh" [activeDayIsOpen]="activeDayIsOpen" (dayClicked)="dayClicked($event.day)" (eventTimesChanged)="eventTimesChanged($event)" (eventClicked)="eventClicked($event.event)">
+        <mwl-calendar-month-view [viewDate]="viewDate" [events]="list_events" [refresh]="refresh" [activeDayIsOpen]="activeDayIsOpen" (dayClicked)="dayClicked($event.day)" (eventClicked)="eventClicked($event.event)">
         </mwl-calendar-month-view>
     </div>
 </div>
