Remove unnecessary code. Edit buttons style.

--- a/src/app/components/administrator/dashboard/create-appointments/create-appointments.component.html
+++ b/src/app/components/administrator/dashboard/create-appointments/create-appointments.component.html
@@ -1,7 +1,12 @@
 <div class="modal-header">
-    <h2 class="modal-title" style="margin-bottom: 0;">Create new appointment</h2>
-    <button type="button" class="btn btn-outline-danger close-btn" (click)="dismiss()">&times;
-    </button>
+    <h2 class="modal-title" style="margin-bottom: 0;">Crear nuevo evento</h2>
+    <button
+    type="button"
+    class="btn btn-outline-danger close-btn"
+    (click)="dismiss()"
+  >
+    &times;
+  </button>
 </div>
 <div class="modal-body container" ngbAutofocus>
     <form [formGroup]="newAppoitmentForm" (ngSubmit)="onSubmit()" novalidate>
@@ -60,9 +65,9 @@
                 <mat-slide-toggle style="float: right;" formControlName="allDay">Todo el dia</mat-slide-toggle>
             </div>
         </mat-card>
-        <div class="modal-footer ">
-            <button mat-raised-button type="button" id="submit-button" class="cancel-button" (click)="decline()">Cancel</button>
-            <button mat-raised-button type="button" id="submit-button" class="add-button" (click)="accept()">Add</button>
+        <div class="modal-footer">
+            <button mat-raised-button type="button" id="submit-button" class="cancel-button" (click)="decline()">Cancelar</button>
+            <button mat-raised-button type="button" id="submit-button" class="add-button" (click)="accept()">Crear</button>
         </div>
     </form>
 </div>
