--- a/src/app/components/students/dashboard/current-proyect-proposals/current-proyect-proposals.component.html
+++ b/src/app/components/students/dashboard/current-proyect-proposals/current-proyect-proposals.component.html
@@ -4,7 +4,7 @@
         <div class="sub-container">
             <form class="example-form">
                 <mat-form-field class="example-full-width" appearance="outline">
-                    <mat-label>Filtrar proyectos</mat-label>
+                    <mat-label>Buscar Proyectos</mat-label>
                     <input type="text" matInput (keyup)="applyFilter($event)" placeholder="Ejemplo: Robot inteligente">
                     <mat-icon matSuffix>search</mat-icon>
                 </mat-form-field>
