--- a/src/app/components/administrator/dashboard/content/content.component.css
+++ b/src/app/components/administrator/dashboard/content/content.component.css
@@ -4,22 +4,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
-}
-
-.content1,
-.content2 {
-    width: 90%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
-}
-
-.chart1,
-.chart2 {
-    width: 90%;
-    height: 40%;
+    flex-wrap: wrap;
 }
 
 .section-title {
@@ -30,10 +15,28 @@
 
 .flex-chart-content {
     width: 100%;
-    height: 90%;
+    height: 85%;
     background-color: #f2f2f2;
     border-radius: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.grid {
+    display: grid;
+    grid-gap: 2%;
+    grid-template-columns: repeat(auto-fill, 48%);
+}
+
+.col {
+    margin: 1rem 0;
+}
+
+@media screen and (max-width: 800px) {
+    .grid {
+        display: grid;
+        grid-gap: 3rem;
+        grid-template-columns: repeat(auto-fill, 100%);
+    }    
 }
